--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="favicon/favicon-16x16.png"
+      href="faviconnew/favicon-16x16.png"
     />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
