--- a/index.html
+++ b/index.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="MobileOptimized" content="width" />
+    <meta name="HandheldFriendly" content="true" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="faviconnew/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+
     <link href="style.css" rel="stylesheet" />
-    <!-- <link href="style.css" rel="stylesheet"> -->
+
+    <link
+      rel="apple-touch-startup-image"
+      href="faviconnew/apple-icon-180x180.png"
+    />
+
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="faviconnew/favicon-16x16.png"
     />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="faviconnew/apple-icon-57x57.png"
+    />
+    <link rel="manifest" href="/manifest.json" />
+
     <title>Moviel-net</title>
   </head>
   <body>
